INTYG-4548: Optimering av watches för visning av kompletteringar

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcFragaKomplettering/wcFragaKomplettering.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcFragaKomplettering/wcFragaKomplettering.directive.scss
@@ -19,7 +19,9 @@
 
 wc-fraga-komplettering {
 
-  .komplettering-active {
+  display: block;
+
+  &.komplettering-active {
     border: 1px solid $wc-color-05;
     border-radius: 4px;
   }
