--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueRadiogroup/ueRadiogroup.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueRadiogroup/ueRadiogroup.directive.html
@@ -7,7 +7,7 @@
             <input type="radio"
                    ng-attr-id="{{::config.modelProp}}-{{::choice.id|ueDomIdFilter}}"
                    name="{{::config.modelProp}}"
-                   value="{{choice.id}}"
+                   value="{{::choice.id}}"
                    ng-model="modelGetterSetter"
                    ng-model-options="{ getterSetter: true }"
                    ng-change="updateValidation()">
