--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevron/wcHelpChevron.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevron/wcHelpChevron.directive.html
@@ -1,4 +1,4 @@
-<div class="wc-help-chevron" ng-if="showHelp == true" ng-class="{ 'wc-help-chevron-open' : !isCollapsed }">
+<div class="wc-help-chevron" ng-if="showHelp" ng-class="{ 'wc-help-chevron-open' : !isCollapsed }">
   <button type="button" class="wc-help-chevron__button" ng-click="toggleHelp()">
     <i class="glyphicon" ng-class="{'glyphicon-menu-down': isCollapsed, 'glyphicon-menu-up': !isCollapsed}"></i>
   </button>
