--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcFieldSigningDoctor/wcFieldSigningDoctor.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcFieldSigningDoctor/wcFieldSigningDoctor.directive.scss
@@ -1,4 +1,4 @@
-/*
+/*!
  * Copyright (C) 2018 Inera AB (http://www.inera.se)
  *
  * This file is part of sklintyg (https://github.com/sklintyg).
@@ -16,20 +16,33 @@
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
-angular.module('common').factory('common.ueTSFactoryTemplatesHelper', [
-    '$log', 'common.ObjectHelper', 'common.UserModel', 'common.ueFactoryTemplatesHelper',
-    function($log, ObjectHelper, UserModel, ueFactoryTemplates) {
-        'use strict';
 
-        function _patient(viewState) {
-            function _shouldDisableAddressInputWhen(model) {
-                return UserModel.isDjupintegration() && viewState.common.validPatientAddressAquiredFromPU;
+.wc-field-signing-doctor {
+    display: flex;
+    padding-top: 10px;
+    background-color: $wc-color-24;
+    padding-bottom: 10px;
+    border-radius: 5px 5px 0 0;
+    .left {
+        flex: 1 0 auto;
+        span {
+            &.header {
+                @extend %wc-typo-13;
             }
-            return ueFactoryTemplates.patient(_shouldDisableAddressInputWhen, true, true);
+            &.name {
+                @extend %wc-typo-07;
+            }
+            float: right;
+            clear: both;
+            color: $wc-color-19;
         }
-
-
-        return {
-            patient: _patient
-        };
-    }]);
+    }
+    .right {
+        flex: 0 0 45px;
+        .material-icons {
+            font-size: 30px;
+            margin-top: 5px;
+            margin-left: 5px;
+        }
+    }
+}
