--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/modal/wcModal.content.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/modal/wcModal.content.html
@@ -12,9 +12,11 @@
       </h3>
     </div>
 
-    <div class="modal-body">
-      <!-- modalBody -->
-    </div>
+    <wc-bottom-fadeout>
+      <div class="modal-body">
+        <!-- modalBody -->
+      </div>
+    </wc-bottom-fadeout>
 
     <div class="modal-footer" style="bottom: 0;width: 100%;margin-top:0px;height:74px">
       <div class="form-inline">
