--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcPatientInfoChangeMessage/wcPatientInfoChangeMessageModal.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcPatientInfoChangeMessage/wcPatientInfoChangeMessageModal.template.html
@@ -1,8 +1,10 @@
 <div class="modal-header">
   <h3>{{header}}</span></h3>
 </div>
-<div class="modal-body" ng-bind-html="body">
-</div>
+<wc-bottom-fadeout>
+  <div class="modal-body" ng-bind-html="body">
+  </div>
+</wc-bottom-fadeout>
 <div class="modal-footer">
   <button type="button" class="btn btn-primary" id="confirmationOkButton" ng-click="$close()">Stäng</button>
 </div>
