--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/dialog/dialogMessage.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/dialog/dialogMessage.template.html
@@ -2,8 +2,10 @@
   <button type="button" class="close" ng-click="$close()"><i class="material-icons">close</i></button>
   <h3><span dynamic-label key="{{titleId}}"></span></h3>
 </div>
-<div class="modal-body" ng-bind-html="bodyText">
-</div>
+<wc-bottom-fadeout>
+  <div class="modal-body" ng-bind-html="bodyText">
+  </div>
+</wc-bottom-fadeout>
 <div class="modal-footer">
   <button type="button" class="btn btn-primary" id="confirmationOkButton" ng-click="$close()">Stäng</button>
 </div>
