INTYG-5616: Lagt in gradient längst ner på intygen

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/intyg/intyg.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/intyg/intyg.html
@@ -2,6 +2,9 @@
 <div ui-view="header"></div>
 <div class="webcert-workarea-hflex-container centered-constrained-content" ng-show="!viewState.common.activeErrorMessageKey">
 
+  <div class="bottom-fadeout-gradient wc-color-27">
+    <div></div>
+  </div>
 
   <div id="certificate-content-container" class="webcert-workarea-intyg container-fluid">
         <!-- fk7263-ns -->
