--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/intyg/intyg.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/intyg/intyg.html
@@ -2,6 +2,11 @@
 
 
 <div class="webcert-workarea-hflex-container centered-constrained-content" ng-show="!viewState.common.activeErrorMessageKey">
+
+  <div class="bottom-fadeout-gradient wc-color-27">
+    <div></div>
+  </div>
+
   <div id="certificate-content-container" class="webcert-workarea-intyg container-fluid ts-bas-ns weak-hidden"
        ng-class="{show: viewState.common.showTemplate}">
     <wc-spinner label="common.load.certificate" show-spinner="!viewState.common.doneLoading">
