--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/mixins/_variables.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/mixins/_variables.scss
@@ -22,6 +22,9 @@
 //how wide should effective content on page grow to before add spacing to sides
 $wc-max-content-width: 1440px;
 
+// bottom gradient height
+$wc-text-fadeout-height: 30px;
+
 //colors
 $wc-color-07: #212121;
 $wc-color-08: #3C3C3C;
