--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcBottomFadeout/wcBottomFadeout.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcBottomFadeout/wcBottomFadeout.directive.scss
@@ -25,9 +25,11 @@
   }
 }
 
-$wc-text-fadeout-height: 30px;
-
 wc-bottom-fadeout {
+
+  .bottom-fadeout-gradient {
+    @extend %bottom-gradient;
+  }
 
   display: block;
   position: relative;
@@ -45,44 +47,4 @@ wc-bottom-fadeout {
   }
 }
 
-wc-bottom-fadeout,
-.webcert-workarea-hflex-container > {
-  //absolutely positioned element with a gradient background.
-  //The pointer-events:none is important, otherwise elements such as button below this can't be clicked.
-  .bottom-fadeout-gradient {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    padding: 0 20px;
-    width: 100%;
-    height: $wc-text-fadeout-height;
-    pointer-events: none;
-
-    div {
-      background-image: linear-gradient(to top, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
-      width: 100%;
-      height: 100%;
-      pointer-events: none;
-    }
-    &.wc-color-02 div {
-      background-image: linear-gradient(to top, rgba($wc-color-02, 1) 0%, rgba($wc-color-02, 0) 100%);
-    }
-    &.wc-color-28 div {
-      background-image: linear-gradient(to top, rgba($wc-color-28, 1) 0%, rgba($wc-color-28, 0) 100%);
-    }
-    &.wc-color-27 div {
-      background-image: linear-gradient(to top, rgba($wc-color-27, 1) 0%, rgba($wc-color-27, 0) 100%);
-    }
-  }
-}
-
-.webcert-workarea-hflex-container {
-  > .bottom-fadeout-gradient {
-    max-width: $wc-max-content-width * 0.6;
-    left: auto;
-    z-index: 10;
-    padding: 0 15px;
-    width: 60%;
-  }
-}
 
