--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelScrollableBody/wcSupportPanelScrollableBody.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelScrollableBody/wcSupportPanelScrollableBody.directive.scss
@@ -1,8 +1,6 @@
 
 wc-support-panel-scrollable-body {
 
-  $wc-text-fadeout-height: 30px;
-
   position: relative;
   display: flex;
   flex: 1;
@@ -23,27 +21,8 @@ wc-support-panel-scrollable-body {
   //absolutely positioned element with a gradient background.
   //The pointer-events:none is important, otherwise elements such as button below this can't be clicked.
   .bottom-fadeout-gradient {
-    position: absolute;
-    bottom: 0;
-    left: 0;
+    @extend %bottom-gradient;
+
     padding: 0;
-    width: 100%;
-    height: $wc-text-fadeout-height;
-    pointer-events: none;
-
-    div {
-      //background: linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 60%);
-      background-image: linear-gradient(to top, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
-      width: 100%;
-      height: 100%;
-      pointer-events: none;
-    }
-
-    &.wc-color-02 div {
-      background-image: linear-gradient(to top, rgba($wc-color-02, 1) 0%, rgba($wc-color-02, 0) 100%);
-    }
-    &.wc-color-28 div {
-      background-image: linear-gradient(to top, rgba($wc-color-28, 1) 0%, rgba($wc-color-28, 0) 100%);
-    }
   }
 }
