--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -19,7 +19,9 @@
  */
 
   // Import partials
-  @import "css/_variables.scss";
+  @import "css/mixins/variables";
+  @import 'css/mixins/fonts';
+  @import 'css/mixins/mixins';
 
   // injector
   @import '../app-shared/unified-view/components/_variables.scss';
@@ -100,7 +102,6 @@
   @import 'components/wcSupportPanelManager/wcSupportPanelScrollableBody/wcSupportPanelScrollableBody.directive.scss';
   @import 'components/wcTableHead/wcTableHead.directive.scss';
   @import 'components/wcToggle/wcToggle.directive.scss';
-  @import 'css/_fonts.scss';
   @import 'css/_legacy-to-be-removed.scss';
   @import 'css/_wc-uv-override.scss';
   @import 'css/card.scss';
