INTYG-5653: Fixat till gradient för alert-rutor

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcBottomFadeout/wcBottomFadeout.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcBottomFadeout/wcBottomFadeout.directive.scss
@@ -31,6 +31,10 @@ wc-bottom-fadeout {
     @extend %bottom-gradient;
   }
 
+  wc-alert-message .alert {
+    padding-bottom: 12px;
+  }
+
   display: block;
   position: relative;
 
