--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/aboutDialog.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/aboutDialog.template.html
@@ -62,5 +62,5 @@
   </div>
 </wc-bottom-fadeout>
 <div class="modal-footer">
-  <button type="button" class="btn btn-primary" ng-click="$close()">Stäng</button>
+  <button type="button" class="btn btn-default" ng-click="$close()">Stäng</button>
 </div>
