INTYG-5793: Ändra rubrik för ärendekommunikation i faq

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/vanliga-fragor/faq-uthopp-partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/vanliga-fragor/faq-uthopp-partial.html
@@ -1,6 +1,6 @@
 <!-- Fråga och svars-funktionen -->
 <div class="category" wc-authority feature="HANTERA_FRAGOR">
-  <h2><i class="material-icons">forum</i> Fråga och svars-funktionen</h2>
+  <h2><i class="material-icons">forum</i> Ärendekommunikation</h2>
 
   <wc-faq-question title="Hur ställer jag en fråga till Försäkringskassan?">
     <p>Funktionen för fråga och svar blir tillgänglig först när intyget är signerat och skickat till
