--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/vanliga-fragor/faq-djupintegrerad-partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/vanliga-fragor/faq-djupintegrerad-partial.html
@@ -51,15 +51,15 @@
     <p>Att en patient har en sekretessmarkering, betyder att Skatteverket har bedömt att patientens personuppgifter är
       extra viktiga att skydda. Det finns speciella riktlinjer om hur personuppgifter för invånare med
       sekretessmarkering ska hanteras. I Webcert innebär det att:
+    </p>
     <ul>
       <li>Endast läkare och tandläkare kan skapa intyg för dessa patienter.</li>
       <li>Endast läkare och tandläkare, inloggade på den vårdenhet intyget förskrevs kan se och hantera intyget.</li>
-      <li>Det är synligt i alla bildskärmsfönster att patienten har en sekretessmarkering.</li>
+      <li>Det är synligt i alla vyer att patienten har en sekretessmarkering.</li>
       <li>En utredning kring intyget och dess mottagare måste ske innan ett intyg kan tillåtas skrivas och skickas
         elektroniskt. Vilket är orsaken till att alla intyg inte går att utfärda för patienter med sekretessmarkering.
       </li>
     </ul>
-    </p>
   </wc-faq-question>
 
   <wc-faq-question title="Kan jag skriva intyg för en patient med sekretessmarkering? ">
