INTYG-5807: Lagt till ny kategori under frågor och svar

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/vanliga-fragor/faq-djupintegrerad-partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/vanliga-fragor/faq-djupintegrerad-partial.html
@@ -133,6 +133,27 @@
 
 </div>
 
+<!-- Stöd för ifyllnad och bedömning -->
+<div class="category">
+  <h2><i class="material-icons">lightbulb_outline</i> Stöd för ifyllnad och bedömning</h2>
+
+  <wc-faq-question title="Vilka stöd finns det för att bedöma patients behov av sjukskriviningsgrad- och period och för att underlätta intygsutfärdande?">
+    <p>
+      I Webcert finns flera olika typer av stöd för ifyllnad och bedömning för Försäkringskassans Läkarintyg för sjukpenning.
+      Samtliga stöd är markerade med en glödlampa-symbol.
+    </p>
+    <p>
+      I Webcerts högerfält hittar du fliken "FMB" som presenterar Socialstyrelsens Försäkringsmedicinska beslutsstöd som innehåller
+      rekommendationer för sjukskrivning utifrån sjukdomar och tillstånd. Rekommendationerna är inte regler, utan vägledning.
+      Bedömningen av en persons arbetsförmåga ska alltid vara individuell och utgå ifrån individens unika förutsättningar.
+    </p>
+    <p>
+      Vid fältet "Bedömning" i intyget kan du ange hur många timmar patienten arbetar i snitt per vecka.
+      Detta stöd syftar till att tydliggöra hur många timmar per vecka patienten bedöms kunna arbeta när en viss nedsättning av arbetsförmåga har angivits.
+      Uppgiften lagras inte som en del av intyget då Försäkringskassan inhämtar information från annat håll.
+    </p>
+  </wc-faq-question>
+</div>
 
 
 
