INTYG-5806: Lagt till tooltip på högerfältet och ändrat till ärendekommunikation

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelManager.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelManager.directive.html
@@ -1,6 +1,12 @@
 <ul class="support-tabs">
   <li ng-repeat="tab in config.tabs" role="presentation" ng-class="{'active': tab.active}">
-    <a href ng-click="onSelect(tab, $event)" ng-attr-id="{{'tab-link-' + tab.id}}">{{tab.title}}</a>
+    <a href ng-click="onSelect(tab, $event)"
+       ng-attr-id="{{::'tab-link-' + tab.id}}"
+       uib-popover="{{::getText(tab.tooltip)}}"
+       popover-trigger="mouseenter"
+       popover-placement="auto top">
+      <span dynamic-label key="{{::tab.title}}"></span>
+    </a>
   </li>
 </ul>
 
