--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCompactCertificateHeader/miCompactCertificateHeader.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCompactCertificateHeader/miCompactCertificateHeader.directive.html
@@ -1,36 +1,34 @@
-<div
-    ng-class="{'mi-compact-certificate-header': !certMetaModel.isReplaced, 'mi-compact-certificate-header-replaced' : certMetaModel.isReplaced}"
-    ng-attr-id="mi-compact-certificate-header-{{certMetaModel.id}}"
-    ng-show="certMetaModel">
-  <div class="row">
-    <div class="cols-xs-12">
-      <i class="icon icon-doc-text pull-left"></i>
-      <div>
+<div ng-class="{'mi-compact-certificate-header': !certMetaModel.isReplaced, 'mi-compact-certificate-header-replaced' : certMetaModel.isReplaced}"
+        ng-attr-id="mi-compact-certificate-header-{{certMetaModel.id}}"
+        ng-show="certMetaModel">
+    <div class="row-wrapper">
+
+        <i class="icon icon-doc-text pull-left"></i>
+
+        <div class="certificate-header-wrapper">
         <div class="cert-type-title">
-          <h1 ng-if="onViewClick"><a ng-click="onViewClick({cert:certMetaModel})">{{getModuleName()}}</a></h1>
-          <h1 ng-if="!onViewClick">{{getModuleName()}}</h1>
+            <h1 ng-if="onViewClick"><a ng-click="onViewClick({cert:certMetaModel})">{{getModuleName()}}</a></h1>
+            <h1 ng-if="!onViewClick">{{getModuleName()}}</h1>
         </div>
-        <div>
-          <div class="complementary-info">
+        <div class="complementary-info">
             <span ng-if="!certMetaModel.replacedBy">
-                 <span dynamic-label key="{{certMetaModel.type | lowercase}}.compact-header.complementaryinfo-prefix"></span>
-              <span ng-attr-id="certificate-complementary-info-{{certMetaModel.id}}">
+                <p class="small-header" dynamic-label key="{{certMetaModel.type | lowercase}}.compact-header.complementaryinfo-prefix"></p>
+                <p ng-attr-id="certificate-complementary-info-{{certMetaModel.id}}">
                 {{certMetaModel.complementaryInfo}}
-              </span>
+              </p>
             </span>
 
             <span ng-if="certMetaModel.replacedBy" ng-attr-id="certificate-complementary-info-{{certMetaModel.id}}">
-              <span dynamic-label key="certificates.label.replaced"></span>
+              <p dynamic-label key="certificates.label.replaced"></p>
             </span>
-          </div>
-
-          <div class="certificate-issued-date">
-            <span class="visible-xs">Utfärdat</span>
-            <span class="hidden-xs">Intyg utfärdat</span>
-            <b>{{certMetaModel.sentDate | date:'shortDate'}}</b>
-          </div>
         </div>
-      </div>
+        </div>
+
+
     </div>
-  </div>
+    <div class="certificate-issued-date date-wrapper">
+        <span class="visible-xs">Utfärdat</span>
+        <span class="hidden-xs">Intyg utfärdat</span>
+        <b>{{certMetaModel.sentDate | date:'shortDate'}}</b>
+    </div>
 </div>
