--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/dialog/dialogMessage.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/dialog/dialogMessage.template.html
@@ -1,6 +1,6 @@
-<div class="modal-header">
+<div id="{{dialogId}}" class="modal-header">
   <button type="button" class="close" ng-click="$close()"><i class="material-icons">close</i></button>
-  <h3><span dynamic-label key="{{titleId}}"></span></h3>
+  <h3><span ng-bind-html="title"></span><span dynamic-label key="{{titleId}}"></span></h3>
 </div>
 <wc-bottom-fadeout>
   <div class="modal-body" ng-bind-html="bodyText">
