INTYG-5806: Lagt in stöd för att skicka in ikon i configen.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelManager.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelManager.directive.html
@@ -5,6 +5,7 @@
        uib-popover="{{::getText(tab.tooltip)}}"
        popover-trigger="mouseenter"
        popover-placement="auto top">
+      <i data-ng-if="tab.icon" class="material-icons">{{::tab.icon}}</i>
       <span dynamic-label key="{{::tab.title}}"></span>
     </a>
   </li>
