--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelManager.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelManager.directive.scss
@@ -39,6 +39,9 @@ wc-support-panel-manager {
         border-radius: 4px 4px 0 0;
       }
 
+      .material-icons {
+        margin: -3px 0;
+      }
 
       > a {
         @extend %wc-typo-07;
