INTYG-5606: Sätt till att vi har samma text på alla ställen vi visar cookie info

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -331,9 +331,13 @@
       color: $wc-color-21;
     }
 
-    .external-link {
+    &.external-link {
       color: $wc-color-17;
     }
+  }
+
+  .external-link-icon {
+    font-size: inherit;
   }
 
   .dark {
