INTYG-5616: Lagt in break-word och sätt till att det är fadeout directives scroll som används

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/wcInlineKomplettering/wcInlineKomplettering.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/wcInlineKomplettering/wcInlineKomplettering.directive.scss
@@ -11,6 +11,7 @@ wc-inline-komplettering {
 
   .inline-komplettering-text {
     white-space: pre-line;
+    word-break: break-all;
   }
 
   .inline-komplettering-heading {
