--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextarea/ueTextarea.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextarea/ueTextarea.directive.html
@@ -1,6 +1,7 @@
 <ue-validation-wrapper validations="validation.messagesByField[config.modelProp.toLowerCase()]" class="ue-del-fraga">
   <ue-label config="::config.label" model="::model"></ue-label>
-  <textarea ng-attr-id="{{::config.modelProp|ueDomIdFilter}}" name="{{::config.modelProp}}" class="form-control" rows="6"
+  <textarea ng-attr-id="{{::config.modelProp|ueDomIdFilter}}" name="{{::config.modelProp}}" class="form-control"
+            rows="{{::config.rows || 6}}"
             auto-expand
             ng-model="modelGetterSetter"
             ng-model-options="{ debounce: 500, getterSetter: true }"
