INTYG-5668: Ser till att knappen inte återanvänds så nästa rad inte får fokus

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakMulti.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakMulti.directive.html
@@ -10,7 +10,7 @@
         <span class="label-padding" wc-help-chevron-text help-text-key="{{config.orsakLabel}}.HLP"></span>
       </th>
     </tr>
-    <tr ng-repeat="orsak in model[config.modelProp] track by $index">
+    <tr ng-repeat="orsak in model[config.modelProp]">
       <td>
         <input id="orsak-multi-{{$index}}-beskrivning"
                type="text"
