--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextarea/ueTextArea.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextarea/ueTextArea.directive.scss
@@ -1,3 +1,10 @@
 ue-textarea {
   display: block;
+
+  textarea.form-control {
+    &:disabled, fieldset[disabled] & {
+      background-color: $wc-color-20;
+      color: $wc-color-09;
+    }
+  }
 }
