--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueYear/ueYear.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueYear/ueYear.directive.scss
@@ -20,5 +20,9 @@
 ue-year {
   input.form-control {
     width: 4em;
+    &:disabled, fieldset[disabled] & {
+      background-color: $wc-color-20;
+      color: $wc-color-09;
+    }
   }
 }
